--- a/Gomoku/Gomoku.ui
+++ b/Gomoku/Gomoku.ui
@@ -55,7 +55,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="btnResetGame">
       <property name="text">
        <string>Reset</string>
       </property>
