--- a/Gomoku/Gomoku.ui
+++ b/Gomoku/Gomoku.ui
@@ -61,6 +61,13 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QPushButton" name="drawButton">
+      <property name="text">
+       <string>Set draw</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
